[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

[flake8]
max-line-length = 100
exclude = old_stuff.py
